<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.weather.fragments.WeatherFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutAnimation="@anim/layout_animation_weather_item"
        android:padding="2dp"/>

</FrameLayout>