<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.weather.WeatherActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_layout"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>